--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,8 +24,8 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token    : ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region           : us-east-1
-    - run: terraform -chdir=./terraform/aws init
-    - run: terraform -chdir=./terraform/aws validate
-    - run: terraform -chdir=./terraform/aws plan -out tfplan
-    - run: terraform -chdir=./terraform/aws apply tfplan
+    - run: terraform -chdir=./terraform init
+    - run: terraform -chdir=./terraform validate
+    - run: terraform -chdir=./terraform plan -out tfplan
+    - run: terraform -chdir=./terraform apply tfplan
  
