--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,6 +26,6 @@ jobs:
         aws-region           : us-east-1
     - run: terraform -chdir=./terraform init
     - run: terraform -chdir=./terraform validate
-    # - run: terraform -chdir=./terraform plan -out tfplan
-    # - run: terraform -chdir=./terraform apply tfplan
+    - run: terraform -chdir=./terraform plan -out tfplan
+    - run: terraform -chdir=./terraform apply tfplan
  
