--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,7 +27,7 @@ jobs:
     - run: terraform -chdir=./terraform init
     - run: terraform -chdir=./terraform validate
     # - run: terraform -chdir=./terraform plan -out tfplan
-    - run: terraform -chdir=./terraform plan destroy -out tfplan
+    - run: terraform -chdir=./terraform plan -destroy -out tfplan
     - run: terraform -chdir=./terraform apply tfplan
  
 
